--- a/src/styles/components/_gallery.scss
+++ b/src/styles/components/_gallery.scss
@@ -21,42 +21,46 @@
     @extend %h2;
 
     border: none;
+    border-radius: $image-border-radius;
     outline: none;
     background-color: transparent;
-
-    &::after {
-      content: "";
-      position: absolute;
-      bottom: -30px;
-      left: 50%;
-
-      width: 0;
-      height: 10px;
-
-      background-color: $red-medium;
-      border-radius: 5px;
-
-      transform: translateX(-50%);
-      transition: width 0.3s;
-    }
 
     &::before {
       content: "";
       position: absolute;
       top: 0;
-      left: 50%;
+      left: 0;
 
-      width: calc(100% - 20px);
+      width: 100%;
       height: 100%;
 
       background-color: #fff;
       opacity: 0.4;
-      transform: translateX(-50%);
-      transition: width 0.3s;
+      transform: scaleX(1);
+      transform-origin: left top;
+      transition: transform 0.5s ease-out;
     }
 
     &:hover::before {
-      width: 0;
+      transform: scaleX(0);
+      transform-origin: right bottom;
+    }
+
+    &::after {
+      content: "";
+      position: absolute;
+      top: calc(100% + 20px);
+      left: 0;
+
+      width: 100%;
+      height: 10px;
+
+      background-color: $red-medium;
+      border-radius: 5px;
+
+      transform: scaleX(0);
+      transform-origin: right center;
+      transition: transform 0.3s ease-out;
     }
 
     &:focus {
@@ -65,11 +69,12 @@
 
     &--active {
       &::before {
-        width: 0;
+        transform: scaleX(0);
       }
 
       &::after {
-        width: calc(100% - 20px);
+        transform: scaleX(1);
+        transform-origin: left center;
       }
     }
   }
@@ -77,13 +82,12 @@
   &__button-img {
     position: absolute;
     top: 0;
-    left: 50%;
+    left: 0;
 
-    width: calc(100% - 20px);
+    width: 100%;
     height: inherit;
 
     border-radius: $image-border-radius;
-    transform: translateX(-50%);
   }
 
   &__photo-item {
@@ -94,6 +98,7 @@
     position: relative;
     width: inherit;
     height: inherit;
+    border-radius: $image-border-radius;
     overflow: hidden;
   }
 
@@ -103,15 +108,17 @@
     left: 0;
 
     height: inherit;
-    width: inherit;
+    width: 100%;
 
     object-fit: cover;
     border-radius: $image-border-radius;
+
     transition: transform 0.6s;
-    transform: translateY(100%);
+    transform: translateY(100%) translateZ(0);
+    @include hover(transform, scale(1.1), 0.5s);
 
     &--show {
-      transform: translateY(0);
+      transform: translateY(0) translateZ(0);
     }
 
     &--large-height {
@@ -121,6 +128,10 @@
     &--small-height {
       height: 298px;
     }
+  }
+
+  &__group {
+    width: 100%;
   }
 
   @media (max-width: 994px) {
@@ -136,14 +147,9 @@
       font-size: 35px;
 
       &::after {
-        bottom: -15px;
+        top: calc(100% + 10px);
         height: 5px;
       }
-    }
-
-    &__group {
-      padding-left: 0;
-      padding-right: 0;
     }
 
     &__photo-item {
